# vat_201

./: .gitignore  README.md  pyproject.toml
vat_201/: hooks.py  modules.txt
vat_201/config/: desktop.py  docs.py
vat_201/vat_201/report/uae___vat_201/: uae___vat_201.js  uae___vat_201.json  uae___vat_201.py
